@@ -10,6 +10,7 @@ For a detailed view of what has changed, refer to the {uri-repo}/commits/master[
 === Added
 
 * convert codeblock with non-contiguous lines that begins with command prompt to source,console listing block
+* use list continuation to attach blockquote to list item
 
 === Changed
 
